# llvm

./: .travis.yml  LICENSE.md  README.md
include/llvm/: InitializePasses.h
lib/Analysis/: InstCount.cpp
lib/CodeGen/: CMakeLists.txt  CleanUnisonMetadata.cpp  CodeGen.cpp  ComputeISelCost.cpp  DumpISelWCosts.cpp  ISelCost.cpp  LLVMBuild.txt  LLVMTargetMachine.cpp  MIRPrinter.cpp  MIRPrinter.h  MIRPrintingPass.cpp  MachineBasicBlock.cpp  MachineCodeStats.cpp  MachineFunction.cpp  MachineInstr.cpp  Makefile  MemoryAlias.cpp  Passes.cpp  ScheduleDAGInstrs.cpp  TargetPassConfig.cpp  TrivialBranchFolding.cpp  TrivialBranchFolding.h  UnisonMIRPrepare.cpp  UnisonMIRPrepare.h  WeightedIPB.cpp
lib/TableGen/: CMakeLists.txt  Unison.cpp  (+1 more)
lib/Transforms/: CMakeLists.txt  Makefile
lib/Transforms/AttachExecFreqMetadata/: AttachExecFreqMetadata.cpp  CMakeLists.txt  Makefile
lib/Transforms/AttachFunMetadata/: AttachFunMetadata.cpp  CMakeLists.txt  Makefile
lib/Transforms/BreakConstantsGEPs/: BreakConstantsGEPs.cpp  CMakeLists.txt  LICENSE.txt  Makefile
lib/Transforms/EarlyCSEWithoutGetElemPtr/: CMakeLists.txt  EarlyCSEWithoutGetElemPtr.cpp  Makefile
lib/Transforms/ExpandGetElementPtr/: CMakeLists.txt  ExpandGetElementPtr.cpp  LICENSE  Makefile
lib/Transforms/LiftConstExprs/: CMakeLists.txt  LICENSE.txt  LiftConstExprs.cpp  Makefile
lib/Transforms/LowerGetElementPtr/: CMakeLists.txt  LowerGetElementPtr.cpp  Makefile
lib/Transforms/LowerSelect/: CMakeLists.txt  LowerSelect.cpp  Makefile
lib/Transforms/PrintFunMetadata/: CMakeLists.txt  Makefile  PrintFunMetadata.cpp
(+34 files in other folders)
