add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(AttachExecFreqMetadata)
add_subdirectory(LowerSelect)
add_subdirectory(LowerGetElementPtr)
add_subdirectory(LiftConstExprs)
